--- a/styles.css
+++ b/styles.css
@@ -363,6 +363,7 @@ footer {
 
 /* Responsive Design */
 @media (max-width: 768px) {
+
     .hamburger {
         display: block !important;
         visibility: visible;
@@ -408,5 +409,19 @@ footer {
 
     .nav-menu li a::after {
         display: none;
+    }
+
+    .about-image img{
+        width: 100%;
+        height: 350px;
+        border-radius: 25px;
+    }
+
+    .about-content {
+        flex-direction: column;
+        gap: 2rem;
+    }
+    .about-text{
+        text-align: center;
     }
 }
